@@ -27,6 +27,7 @@ Some JS and CSS files removed/reorganised - CHANGED
 Info for PHP settings requirements added on GD Import & Export page - ADDED
 Location manager select not working with genesis child themes on mobile - FIXED
 Changes for Genesis child theme fixes - CHANGED
+Import/export we now try to use ini_set to extend the execution times, if ini_set() can't be use we show manual settings notification - CHANGED
 
 v1.4.9
 Google Analytics extra error messages added to help users debug - ADDED
